{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 552,
  "lineage": "f78ed856-d54a-8ab7-2680-7740bbe0007c",
  "resources": [
    {
      "module": "module.k8s-lb-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/disks/k8s-lb-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-lb-1",
            "instance_id": "6209615121172300056",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-G4qJBxfKAM=",
            "metadata_startup_script": "#!/bin/bash\n\napt update\napt install nginx -y\n\ncat \u003c\u003cEOF | sudo tee -a /etc/nginx/nginx.conf\nstream {\n    upstream k8s_masters {\n        server 10.0.0.2:6443;\n        server 10.1.0.2:6443;\n        server 10.2.0.2:6443;\n    }\n\n    server {\n        listen     6443;\n        proxy_pass k8s_masters;\n    }\n}\nEOF\n\nnginx -s reload",
            "name": "k8s-lb-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.84.183",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.0.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-a",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-lb-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1a"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-master-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/disks/k8s-master-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-master-1",
            "instance_id": "4537854111145427219",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-OncnUImrCw=",
            "metadata_startup_script": "#!/bin/bash\n\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\n\nsudo sysctl --system\n\nsudo apt update\n\nsudo apt install \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common -y\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nadd-apt-repository \\\n   \"deb [arc [...]
            "name": "k8s-master-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.209.34",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-a",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-master-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1a"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-master-2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-b/disks/k8s-master-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-b/instances/k8s-master-2",
            "instance_id": "8610183187422675202",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-OncnUImrCw=",
            "metadata_startup_script": "#!/bin/bash\n\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\n\nsudo sysctl --system\n\nsudo apt update\n\nsudo apt install \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common -y\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nadd-apt-repository \\\n   \"deb [arc [...]
            "name": "k8s-master-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.247.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.1.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-b",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-b/instances/k8s-master-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1b"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-master-3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-c/disks/k8s-master-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-c/instances/k8s-master-3",
            "instance_id": "5841592224120209666",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-OncnUImrCw=",
            "metadata_startup_script": "#!/bin/bash\n\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\n\nsudo sysctl --system\n\nsudo apt update\n\nsudo apt install \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common -y\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nadd-apt-repository \\\n   \"deb [arc [...]
            "name": "k8s-master-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.71.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-c",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-c/instances/k8s-master-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-c"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1c"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-worker-1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/disks/k8s-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-worker-1",
            "instance_id": "8034415204754161944",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-OncnUImrCw=",
            "metadata_startup_script": "#!/bin/bash\n\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\n\nsudo sysctl --system\n\nsudo apt update\n\nsudo apt install \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common -y\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nadd-apt-repository \\\n   \"deb [arc [...]
            "name": "k8s-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.246.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.0.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-a",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-a/instances/k8s-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1a"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-worker-2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20201211",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-b/disks/k8s-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/thermal-tome-298313/zones/europe-west3-b/instances/k8s-worker-2",
            "instance_id": "4000274555311390978",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQZByMuC7zP+qOg/oP5OkmZJZmux2cgZ/ui+VF1p3RE9M3WnvfIg72flP/5rgobbFIRtVxL9O6tOZVvcTOCKM4QW2h20QeRw0qsnhPS2nfv2o628AIwk9VEuNbv+bcNAfoqnkWkScHex7lVeNksEc3SyCmR6Mbcy90kawUaU6moHvWzMlqaAM5ccYDKzbzDTpD5GgbZIUOCbV69Dn2q8spg6qrnI/NPP8W4DiDUg6agcBCsJhGIqMdclLMVFqnMOzWHPRXVhaRMzwfIvPooDiEKTPJTBQq6p1B4Fm0z6jIYi16SFZO1KLSGC1kPV3Qwrpo50wuSinVf8NUhw+r44COGQc0RduDdRiFhYm4HBAAoKu9rZXrh8IyPqRB1KL/bAjWSxK23wHWK2tRNDRBHvkzAfBD+RD/qlvG8Jq0lQ2j4chx [...]
            },
            "metadata_fingerprint": "-OncnUImrCw=",
            "metadata_startup_script": "#!/bin/bash\n\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\n\nsudo sysctl --system\n\nsudo apt update\n\nsudo apt install \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common -y\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -\n\nadd-apt-repository \\\n   \"deb [arc [...]
            "name": "k8s-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.21.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
                "network_ip": "10.1.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-b",
                "subnetwork_project": "thermal-tome-298313"
              }
            ],
            "project": "thermal-tome-298313",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/zones/europe-west3-b/instances/k8s-worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.k8s_subnet_1b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-01-04T08:18:39.344-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thermal-tome-298313/global/firewalls/k8s-allow-icmp",
            "log_config": [],
            "name": "k8s-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "priority": 65534,
            "project": "thermal-tome-298313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/firewalls/k8s-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-01-04T08:18:39.200-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thermal-tome-298313/global/firewalls/k8s-allow-internal",
            "log_config": [],
            "name": "k8s-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "priority": 65534,
            "project": "thermal-tome-298313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/firewalls/k8s-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-01-04T08:18:39.730-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/thermal-tome-298313/global/firewalls/k8s-allow-ssh",
            "log_config": [],
            "name": "k8s-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "priority": 65534,
            "project": "thermal-tome-298313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/firewalls/k8s-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/thermal-tome-298313/global/networks/kube-vpc",
            "mtu": 0,
            "name": "kube-vpc",
            "project": "thermal-tome-298313",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-04T08:18:39.845-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-a",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "kube-subnet-a",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "thermal-tome-298313",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-04T08:18:39.874-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-b",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "kube-subnet-b",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "thermal-tome-298313",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-04T08:18:39.490-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-c",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "kube-subnet-c",
            "network": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/global/networks/kube-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "thermal-tome-298313",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/thermal-tome-298313/regions/europe-west3/subnetworks/kube-subnet-c"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}